[tool.poetry]
name = "ma"
version = "0.1.0"
description = ""
authors = ["Jan Beckschewe <17655375+jan-be@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.17.1"
numpy = "^2.0.0"
pandas = "^2.2.2"
docker = "^7.1.0"
plotly = "^5.22.0"
fastapi = "^0.111.1"
confluent-kafka = "^2.5.0"
geopy = "^2.4.1"
tcconfig = "^0.29.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
