[tool.poetry]
name = "skybed"
version = "0.1.0"
description = ""
authors = ["Jan Beckschewe <17655375+jan-be@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "skybed" }]

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.17.1"
numpy = "^2.0.0"
pandas = "^2.2.2"
docker = "^7.1.0"
plotly = "^5.22.0"
fastapi = { extras = ["standard"], version = "^0.112.1" }
confluent-kafka = "^2.5.0"
geopy = "^2.4.1"
tcconfig = "^0.29.1"
typer = "^0.12.4"
tqdm = "^4.66.5"
matplotlib = "^3.9.2"
yappi = "^1.6.0"
aiohttp = "^3.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
skybed = "skybed.hypervisor:typer_app"
uav = "skybed.uav.main:typer"

